fix bugs with buttons in safari, long click on mobile, right click during the left btn down

--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ body {
     flex-direction: column;
     align-items: center;
     margin-top: 15px;
+    touch-action: manipulation;
 }
 
 .game__wrapper {
